# ml101

./: .env.example  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 00-basics.ipynb  01-boston_housing.ipynb  02-embeddings.ipynb  03-deep-learning.ipynb  04-llm-basics.ipynb  05-transformers.ipynb  06-computer-vision.ipynb
notebooks/helpers/: llm_basics.py  transformers.py  vision_transformers.py
